--- a/helm/go-web-app-chart/templates/deployment.yaml
+++ b/helm/go-web-app-chart/templates/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: myapp
-        image: w1zdom/go-web-app:v1
+        image: w1zdom/go-web-app:{{ .Values.image.tag }}
         ports:
         - containerPort: 8080
