--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,5 +1,6 @@
 name: CI
 
+# Exclude the workflow to run on changes to the helm chart
 on:
   push:
     branches:
@@ -8,61 +9,64 @@ on:
       - 'README.md'
       - 'helm/**'
       - 'Guide.txt'
-    
+
 jobs:
+
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      
-      - name: Set up GoLang 1.22.5
-        uses: actions/setup-go@v2
-        with:
-          go-version: 1.22.5
-        
-      - name: build
-        uses: go build -o go-web-app
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
-      - name: Test
-        uses: go test ./..
-    
+    - name: Set up Go 1.22
+      uses: actions/setup-go@v2
+      with:
+        go-version: 1.22
+
+    - name: Build
+      run: go build -o go-web-app
+
+    - name: Test
+      run: go test ./...
+  
   code-quality:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
-      - name: Run GoLangCI-lint
-        uses: golangci/golangci-lint-actions@v6
-        with:
-          version: v1.56.2
-
+    - name: Run golangci-lint
+      uses: golangci/golangci-lint-action@v6
+      with:
+        version: v1.56.2
+  
   push:
     runs-on: ubuntu-latest
 
+    needs: build
+
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
-      - name: Setup Docker buildx
-        uses: docker/setup-buildx-action@v1
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
 
-      - name: Docker login
-        uses: docker/login-action@v3
-        with:
-          username: ${{ vars.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: Login to DockerHub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push action
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: ${{ vars.DOCKERHUB_USERNAME }}/go-web-app:${{github.run_id}}
+    - name: Build and Push action
+      uses: docker/build-push-action@v6
+      with:
+        context: .
+        file: ./Dockerfile
+        push: true
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/go-web-app:${{github.run_id}}
 
   update-newtag-in-helm-chart:
     runs-on: ubuntu-latest
@@ -81,8 +85,8 @@ jobs:
 
     - name: Commit and push changes
       run: |
-        git config --global user.email "mayurvidhwani7387@gmail.com"
-        git config --global user.name "Mayur"
+        git config --global user.email "abhishek@gmail.com"
+        git config --global user.name "Abhishek Veeramalla"
         git add helm/go-web-app-chart/values.yaml
-        git commit -m "Update the tag in Helm chart"
+        git commit -m "Update tag in Helm chart"
         git push
